--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     </h1>
     <ul>
        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-       <li><a href="./recipes/applepie.html">Lasagna</a></li> 
-       <li><a href="./recipes/misosoup.html">Lasagna</a></li> 
+       <li><a href="./recipes/applepie.html">Apple Pie Recipes</a></li> 
+       <li><a href="./recipes/misosoup.html">Miso Soup</a></li> 
     </ul>
     
 </body>
